--- a/collections.yml
+++ b/collections.yml
@@ -5,7 +5,7 @@ templates:
       - movie
     tmdb_collection_details: <<collection>>
     tmdb_movie: <<movie>>
-    # sort_title: !02_<<order_>><<collection_name>>
+    sort_title: !02_<<collection_name>>
     sync_mode: sync
     collection_order: custom
 #    schedule: weekly(friday)
@@ -16,5 +16,15 @@ templates:
     smart_label: originally_available.desc
     trakt_list: https://trakt.tv/users/manu101/lists/based-inspired-on-actual-events
     summary: Movies based on true events.
-    sort_title: '+2 Based on true events'
-    collection_poster: 
+    url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/overlays/collections/<<collection>>.png
+    radarr_tag: <<collection_name>>
+  Action:
+    url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/overlays/collections/<<collection>>.png
+    smart_filter:
+      all:
+        any:
+          genre: Action
+        all:
+          genre.not: Animation, Comedy, Sci-Fi, Science Fiction
+          studio.not: Disney
+      sort_by: audience_rating.desc
