--- a/collections.yml
+++ b/collections.yml
@@ -20,8 +20,7 @@ collections:
     # url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/Dark%20Comedy.png
     # sort_title: ++_ComedyDark
   Action:
-    repo: /images/collections/Action.png
-#    url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/Action.png
+    url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/<<collection>>
     sort_title: ++_Action
     smart_filter:
       all:
