--- a/collections.yml
+++ b/collections.yml
@@ -1,6 +1,7 @@
 collections:
   Based on True Events:
     trakt_list: https://trakt.tv/users/manu101/lists/based-inspired-on-actual-events
+    limit: 100
     summary: Movies based on true events.
     radarr_tag: Based on True Events
   Dark Comedies:
@@ -9,8 +10,10 @@ collections:
     tmdb_keyword: https://www.themoviedb.org/keyword/10123/
     url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/Dark%20Comedy.png
     sort_title: ComedyDark
+    limit: 100
     radarr_tag: Dark Comedies
   Martial Arts:
     imdb_list: https://www.imdb.com/list/ls000099643/
     url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/Martial%20Arts.png
+    limit: 100
     radarr_tag: Martial Arts
