--- a/collections.yml
+++ b/collections.yml
@@ -23,9 +23,11 @@ collections:
       - https://trakt.tv/users/29zombies/lists/romantic-comedies
       - https://trakt.tv/users/yirmaster/lists/chick-flicks
     summary: Get in touch with your feminine side.
+    url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/Chick%20Flick.png
     collection_order: alpha
     collection_mode: default
     radarr_tag: Chick Flicks
+    #schedule: monthly(4)
   Heist Movies:
     imdb_list:
       - https://www.imdb.com/list/ls068224634/
@@ -34,6 +36,7 @@ collections:
     collection_order: alpha
     collection_mode: default
     radarr_tag: Heist Movies
+    #schedule: monthly(5)
   Quick Flicks:
     smart_label: release.desc
     summary: Movies 90 minutes or less.
@@ -41,11 +44,13 @@ collections:
     plex_search:
       duration.lte: 90
       genre.not: Animation
+    #schedule: monthly(6)
   Time Travel:
     smart_label: title.asc
     trakt_list: https://trakt.tv/users/vagnerr/lists/time-travel
     summary: Film/show contains time-travel. In any form. Be it time-loop, full on relocation in time, consciousness transfer...
     radarr_tag: Time Travel
+    #schedule: monthly(7)
   Mindfuck Movies:
     trakt_list:
      - https://trakt.tv/users/hdlists/lists/mindfuck-movies
@@ -53,17 +58,16 @@ collections:
     smart_label: critic_rating.desc
     sync_mode: sync
     summary: Movies to leave your mind, well, fucked. Sorted by critical acclaim.
-    url_background: https://i.imgur.com/DM1Im1X.jpeg
+    url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/Mindfuck%20Movies.png
+    url_background: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/mindfuck_background.jpeg
     radarr_tag: mindfuck
-    # schedule: monthly(3)
-              # monthly(17)
+    # schedule: monthly(8)
   Nostalgia Collection:
     trakt_list: https://trakt.tv/users/hdlists/lists/nostalgiac-movies-from-the-80s-90s
     sync_mode: sync
     smart_label: critic_rating.desc
     summary: All The Nostalgiac Movies From The 80s & 90s in One Collection, sorted by critical acclaim.
-    url_poster: https://i.imgur.com/vE8dsdd.jpg
-    url_background: https://i.imgur.com/frz0kly.jpg
+    url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/nostalgia.jpg
+    url_background: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/nostalgia_background.jpeg
     radarr_tag: nostalgia
-    # schedule: monthly(4)
-              # monthly(18)
+    # schedule: monthly(9)
