--- a/collections.yml
+++ b/collections.yml
@@ -74,3 +74,11 @@ collections:
     radarr_tag: gangster
     schedule: monthly(10)
     radarr_tag: gangster
+  Music Movies:
+    trakt_list: https://trakt.tv/users/mguffin/lists/music-movies?sort=popularity,asc
+    url_poster: https://raw.githubusercontent.com/mguffin68/pmm/main/images/collections/Music.jpg
+    collection_order: custom
+    sync_mode: sync
+    radarr_tag: gangster
+    #schedule: monthly(11)
+    radarr_tag: music
