--- a/collections.yml
+++ b/collections.yml
@@ -86,3 +86,19 @@ collections:
     sync_mode: sync
     #schedule: monthly(11)
     radarr_tag: music
+  Critic Bad Movies:
+    plex_search:
+      all:
+        genre.not: Biography, Animation, Documentary
+        critic_rating.gte: 0.1
+      sort_by: critic_rating.asc
+      limit: 20
+    #schedule: monthly(15)
+  Audience Bad Movies:
+    plex_search:
+      all:
+        genre.not: Biography, Animation, Documentary
+        audience_rating.gte: 0.1
+      sort_by: audience_rating.asc
+      limit: 20
+    #schedule: monthly(15)
