--- a/collections.yml
+++ b/collections.yml
@@ -94,6 +94,7 @@ collections:
       sort_by: critic_rating.asc
       limit: 20
     #schedule: monthly(15)
+    item_radarr_tag: PMM-Critic Bad
   Audience Bad Movies:
     plex_search:
       all:
@@ -102,3 +103,4 @@ collections:
       sort_by: audience_rating.asc
       limit: 20
     #schedule: monthly(15)
+    item_radarr_tag: PMM-Audience Bad
